# Automated-Lead-Scraper

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  run.bat  worker.py
app/: config.py  database.py  main.py
app/models/: company.py  job.py  lead.py
app/routes/: analytics.py  api_docs.py  dashboard.py  export.py  leads.py  search.py  worker.py
app/services/: crawler_service.py  dedupe_service.py  discovery_service.py  enrichment_service.py  extraction_service.py  pipeline.py  scoring_service.py  techdetect_service.py  validation_service.py
app/templates/: 404.html  analytics.html  api.html  base.html  dashboard.html  job_status.html  leads.html  search.html
app/utils/: email_utils.py  phone_utils.py  text_utils.py
docs/: README.md  api-reference.md  architecture.md  data-extraction.md  design-decisions.md  discovery-engine.md  pipeline.md  scoring-and-validation.md  worker-architecture.md
exports/: exporter.py
